--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,40 @@
+anyio==3.7.1
+blessed==1.20.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
+contourpy==1.1.0
+cycler==0.11.0
+exceptiongroup==1.1.2
+fonttools==4.41.1
+future==0.18.3
+h11==0.14.0
+h2o==3.42.0.2
 h2o-wave==0.26.1
-requests==2.31.0
+httpcore==0.17.3
+httpx==0.24.1
+idna==3.4
+importlib-resources==6.0.0
+inquirer==3.1.3
+kiwisolver==1.4.4
 matplotlib==3.7.2
+numpy==1.24.4
+packaging==23.1
 pandas==2.0.3
+Pillow==10.0.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-editor==1.0.4
+pytz==2023.3
+readchar==4.0.5
+requests==2.31.0
+six==1.16.0
+sniffio==1.3.0
+starlette==0.31.0
+tabulate==0.9.0
+typing-extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.4
 uvicorn==0.23.2
+wcwidth==0.2.6
+zipp==3.16.2
